--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+zach:
+  first_name: "Zach"
+  last_name: "Loubier"
+  email: "zach@muvdigital"
+  profile_name: "zloubs"
+  # password: "Watson123"
+  # password_confirmation: "Watson123"
